# python-examples

./: .gitignore  .pre-commit-config.yaml  README.md
BeautifulSoup Tutorials/: web_scraping2.py  web_scraping4.py
BeautifulSoup_Tutorials/: Notes.md  web_scraping.py  web_scraping2.py  web_scraping3.py  web_scraping4.py
Confluence_Documentation/: README.md  link_fixer.py  main.py  move_page_cross_instance.py  move_page_in_instance.py  move_space.py  requirements.txt
Conways_Game_Of_Life/: README.md  main.py
Directory_Sync/: main.py
Guess_the_Number/: main.py
Hangman/: animals.txt  diagrams.txt  hangman.py  movies.txt
Madlibs/: madlibs.py
Rock_Paper_Scissors/: main.py
Selenium Tutorials/: tutorial_02.py  tutorial_04.py
Selenium_Tutorials/: tutorial_01.py  tutorial_02.py  tutorial_03.py  tutorial_04.py
Snake_Pygame/: main.py
Static-Server-Example/: app.py  app_test.py  server.service  server_install.sh  server_uninstall.sh  webbrowser_test.py
Tic_Tac_Toe/: tictactoe_cli.py  tictactoe_pygame.py
alarm_clock/: main,py
aws_lambda/: tutorial.txt
file-downloader/: requests-example.py  urllib-example.py  video-example.py  wget-example.py
flask-chat-with-db/: README.md  pyproject.toml
flask-chat-with-db/src/: app.py  db.py  user.py
flask-chat-with-db/src/templates/: chat.html  index.html  login.html  view_room.html
password_generator/: main.py
quiz_game/: main.py
slot-machine/: main.py
temperature-converter/: main.py
tkinter/: example.py
virtual_pet/: main.py
yt-downloader/: README.md  main.py  pyproject.toml
(+26 files in other folders)
